@@ -7,6 +7,7 @@ Version 1.1a to be released
 
 Version 1.0.4 to be released
 ----------------------------
+- Bug: Setting the 'expression' option in an access url causes error (Qiang)
 
 
 Version 1.0.3 March 1, 2009
